Initial implementation of events last processed tick feature.
