# status-service/protobuf/status.swagger.json
@@ -200,6 +200,10 @@
         "intervalInitialTick": {
           "type": "integer",
           "format": "int64"
+        },
+        "eventsLastProcessedTick": {
+          "type": "integer",
+          "format": "int64"
         }
       }
     },
